k8s/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: default
spec:
  backend:
    serviceName: nginx
    servicePort: 8080
